perf: 仓库管理功能