@@ -1,16 +1,19 @@
 package com.bubbles.app.opensource.entity;
 
 import com.bubbles.app.opensource.enums.AbilityEnum;
+import com.bubbles.app.opensource.enums.LocalStatusEnum;
 import com.bubbles.app.opensource.enums.RemoteStatusEnum;
-import com.bubbles.app.opensource.enums.LocalScanEnum;
-import com.bubbles.app.opensource.enums.SourceEnum;
+import com.bubbles.app.opensource.enums.PlatformEnum;
 import jakarta.persistence.*;
 import lombok.*;
 import lombok.experimental.Accessors;
 import org.springframework.data.jpa.domain.support.AuditingEntityListener;
 
+import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * <p>description: 代码库 </p>
@@ -35,27 +38,24 @@ public class Repo {
     private Long id;
     
     @Enumerated(EnumType.STRING)
-    @Column(comment = "仓库来源")
-    private SourceEnum source;
+    @Column(comment = "平台")
+    private PlatformEnum platform;
     
-    @Column(comment = "远程地址")
-    private String remoteAddress;
+    @Column(comment = "平台路径")
+    private String platformPath;
     
-    @Column(comment = "相对地址")
-    private String relativePath;
+    @Column(comment = "仓库路径")
+    private String repoPath;
     
-    @Column(comment = "后缀")
-    private String suffix;
+    @Column(comment = "所属空间")
+    private String namespace;
     
-    @Column(comment = "用户")
-    private String userName;
-    
-    @Column(comment = "仓库名")
+    @Column(comment = "仓库名称")
     private String repoName;
-    
+
     @Enumerated(EnumType.STRING)
-    @Column(comment = "本地扫描状态")
-    private LocalScanEnum scanStatus;
+    @Column(comment = "本地仓库状态")
+    private LocalStatusEnum localStatus;
     
     @Enumerated(EnumType.STRING)
     @Column(comment = "远程仓库状态")
@@ -66,36 +66,58 @@ public class Repo {
     private AbilityEnum ability;
     
     @ManyToMany
-    @JoinTable(
-            name = "repo_tag",
-            joinColumns = @JoinColumn(name = "repo_id"),
-            inverseJoinColumns = @JoinColumn(name = "tag_id")
-    )
+    @JoinTable(name = "repo_tag", joinColumns = @JoinColumn(name = "repo_id"), inverseJoinColumns = @JoinColumn(name = "tag_id"))
     @Builder.Default
     private Set<Tag> tags = new HashSet<>();
     
     public boolean hasRemote() {
-        return switch (source) {
+        return switch (platform) {
             case GITHUB, GITEE, GITCODE, GITLAB -> true;
             case LOCAL, AI -> false;
-            default -> throw new RuntimeException("未定义仓库来源");
+            default -> throw new RuntimeException("未定义仓库来源: " + platform);
         };
     }
     
-    //public String genLocalPath(String rootDir) {
-    //    return switch (source) {
-    //        case GITHUB, GITEE, GITCODE -> "%s/%s/%s/%s".formatted(rootDir, source.getValue(), userName, repoName);
-    //        case GITLAB -> "%s/%s_%s/%s/%s".formatted(rootDir, source.getValue(), suffix, userName, repoName);
-    //        case LOCAL, TEMP, AI -> "%s/%s/%s".formatted(rootDir, source.getValue(), repoName);
-    //        default -> throw new RuntimeException("未定义仓库来源");
-    //    };
-    //}
-    //
-    //public String genSshClone() {
-    //    return switch (source) {
-    //        case GITHUB, GITEE, GITCODE -> "git clone git@%s.com:/%s/%s".formatted(source.getValue().toLowerCase(), userName, repoName);
-    //        case GITLAB -> "git clone git@%s.com:/%s/%s".formatted(remoteAddress, userName, repoName);
-    //        default -> null;
-    //    };
-    //}
+    public String genAbsolutePath(String repoRoot) {
+        // 使用标准化的通用路径，并转为当前系统格式
+        String commonPath = genRelativePath();
+        return Paths.get(repoRoot, commonPath.split("/")).toString();
+    }
+    
+    public String genRelativePath() {
+        return switch (platform) {
+            case GITHUB, GITEE, GITCODE ->
+                    String.format("%s/%s/%s", platform.getValue(), sanitize(namespace), sanitize(repoName));
+            case GITLAB -> "gitlab/" + Arrays.stream(repoPath.split("/"))
+                                             .map(this::sanitize)
+                                             .collect(Collectors.joining("/"));
+            case LOCAL, AI ->
+                    String.format("%s/%s/%s", platform.name().toLowerCase(), sanitize(namespace), sanitize(repoName));
+            default -> throw new RuntimeException("未定义仓库来源: " + platform);
+        };
+    }
+    
+    public String genHttpsUrl() {
+        if (!hasRemote()) return null;
+        return String.format("https://%s/%s.git", platformPath, repoPath);
+    }
+    
+    public String genSshUrl() {
+        if (!hasRemote()) return null;
+        return String.format("git@%s:%s.git", platformPath, repoPath);
+    }
+    
+    /**
+     * 清洗非法字符并统一小写 (防止 Windows 路径错误，防止 macOS 大小写冲突)
+     */
+    private String sanitize(String input) {
+        if (input == null || input.isBlank()) {
+            throw new RuntimeException("输入为空");
+            // todo 在拼接路径时可能会出现 bug
+            //return null;
+        }
+        // 1. 转小写
+        // 2. 替换 Windows 不允许的特殊字符为下划线
+        return input.toLowerCase().replaceAll("[<>:\"\\\\/|?*]", "_");
+    }
 }
